RecyclerView attached to tab just for testing

--- a/app/src/main/res/layout/userslist_fragment.xml
+++ b/app/src/main/res/layout/userslist_fragment.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Users list"
-        android:textSize="45dp"
-        android:textStyle="bold"/>
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recycler_view_id"
+        />
+
 </LinearLayout>
