--- a/app/src/main/res/layout/userslist_fragment.xml
+++ b/app/src/main/res/layout/userslist_fragment.xml
@@ -7,6 +7,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/recycler_view_id"
-        />
+        >
+
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
