--- a/app/src/main/res/layout/auth_activity.xml
+++ b/app/src/main/res/layout/auth_activity.xml
@@ -4,7 +4,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorPrimary">
+    android:background="@color/colorPrimary"
+    android:layout_gravity="center_horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -62,12 +63,12 @@
         android:id="@+id/password"/>
 
     <Button
-        android:layout_width="361dp"
+        android:id="@+id/button_sign_in"
+        android:layout_width="297dp"
         android:layout_height="62dp"
         android:layout_gravity="center"
         android:layout_marginTop="35dp"
         android:text="@string/button_sign_in"
-        android:textSize="17dp"
-        android:id="@+id/button_sign_in"/>
+        android:textSize="17dp" />
 
 </LinearLayout>
