--- a/app/src/main/res/layout/userslist_fragment.xml
+++ b/app/src/main/res/layout/userslist_fragment.xml
@@ -15,9 +15,14 @@
         android:layout_marginBottom="249dp"
         android:visibility="invisible"
         tools:ignore="MissingConstraints" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view_id"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view_id"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
