--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#00bbd3</color>
     <color name="gray_light">#e9e9e9</color>
+    <color name="white">#f9f9f9</color>
+    <color name="gray">#acacac</color>
 </resources>
