--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Username"
+            android:textColor="@color/colorAccent"
             android:textSize="20sp"
             android:textStyle="bold"
             android:id="@+id/username_id"/>
@@ -32,7 +33,7 @@
             android:layout_height="wrap_content"
             android:text="user link"
             android:textSize="15dp"
-            android:textStyle="bold"
+            android:textStyle="normal"
             android:id="@+id/account_link_id"/>
     </LinearLayout>
 
