--- a/app/src/main/res/layout/user_details_layout.xml
+++ b/app/src/main/res/layout/user_details_layout.xml
@@ -16,6 +16,7 @@
         android:id="@+id/detailed_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
         android:layout_gravity="center"
         android:text="@string/author_name"
         android:textSize="35sp" />
