--- a/app/src/main/res/layout/yourprofile_fragment.xml
+++ b/app/src/main/res/layout/yourprofile_fragment.xml
@@ -18,6 +18,7 @@
         android:id="@+id/your_profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
         android:layout_gravity="center"
         android:text="@string/author_name"
         android:textSize="35dp" />
