--- a/app/src/main/res/layout/yourprofile_fragment.xml
+++ b/app/src/main/res/layout/yourprofile_fragment.xml
@@ -1,118 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshLayoutProfile"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="15dp">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/your_profile_image"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="188dp"
-        android:layout_gravity="top"
-        android:scaleType="centerCrop"
-        android:src="@drawable/logo" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingBottom="15dp">
 
-    <TextView
-        android:id="@+id/your_profile_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
-        android:layout_gravity="center"
-        android:text="@string/author_name"
-        android:textSize="35dp" />
-
-    <TextView
-        android:id="@+id/your_profile_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/nickname"
-        android:textSize="13dp" />
-
-    <TextView
-        android:id="@+id/your_profile_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/standart_email"
-        android:textSize="13dp" />
-
-    <TextView
-        android:id="@+id/your_profile_company"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/standart_company"
-        android:textSize="13dp" />
-
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="3"
-        android:orientation="horizontal"
-        android:paddingTop="15dp">
+        <ImageView
+            android:id="@+id/your_profile_image"
+            android:layout_width="match_parent"
+            android:layout_height="188dp"
+            android:layout_gravity="top"
+            android:scaleType="centerCrop"
+            android:src="@drawable/logo" />
 
         <TextView
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="3dp"
-            android:text="@string/gists_count_text"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="3dp"
-            android:text="@string/private_repos_text"
-            android:textSize="15dp"
-            android:textStyle="bold"
-
-            />
-
-        <TextView
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="3dp"
-            android:text="@string/owned_repos_text"
-            android:textSize="15dp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:id="@+id/gists_count_id"
+            android:id="@+id/your_profile_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="3dp"
-            android:text="@string/_45"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+            android:text="@string/author_name"
+            android:textColor="@color/colorAccent"
+            android:textSize="35dp" />
 
         <TextView
-            android:id="@+id/private_count_id"
+            android:id="@+id/your_profile_username"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="3dp"
-            android:text="@string/_2"
-            android:textSize="25dp"
-            android:textStyle="bold" />
+            android:text="@string/nickname"
+            android:textSize="13dp" />
 
         <TextView
-            android:id="@+id/owned_count_id"
+            android:id="@+id/your_profile_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:paddingHorizontal="15dp"
-            android:paddingVertical="3dp"
-            android:text="@string/_52"
-            android:textSize="25dp"
-            android:textStyle="bold" />
-    </GridLayout>
+            android:text="@string/standart_email"
+            android:textSize="13dp" />
 
-    <Button
-        android:id="@+id/go_to_repos_button"
-        android:layout_width="match_parent"
-        android:layout_height="62dp"
-        android:layout_marginHorizontal="25dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/go_to_repos_list_text"
-        android:textSize="15dp" />
+        <TextView
+            android:id="@+id/your_profile_company"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/standart_company"
+            android:textSize="13dp" />
 
-</LinearLayout>
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:columnCount="3"
+            android:orientation="horizontal"
+            android:paddingTop="15dp">
+
+            <TextView
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="3dp"
+                android:text="@string/gists_count_text"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="3dp"
+                android:text="@string/private_repos_text"
+                android:textSize="15dp"
+                android:textStyle="bold"
+
+                />
+
+            <TextView
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="3dp"
+                android:text="@string/owned_repos_text"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/gists_count_id"
+                android:layout_gravity="center"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="3dp"
+                android:text="@string/_45"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/private_count_id"
+                android:layout_gravity="center"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="3dp"
+                android:text="@string/_2"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/owned_count_id"
+                android:layout_gravity="center"
+                android:paddingHorizontal="15dp"
+                android:paddingVertical="3dp"
+                android:text="@string/_52"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </GridLayout>
+
+        <GridLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:columnCount="2">
+
+            <Button
+                android:id="@+id/go_to_repos_button"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:text="@string/go_to_repos_list_text"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/edit_profile_button"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:text="@string/edit_profile_text"
+                android:textSize="15sp" />
+        </GridLayout>
+
+
+    </LinearLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
